# Thesis_robotic_drilling

./: README.md  controller_setup_instructions.md  horizontal_collision.bag  install.sh  launchCtrl.sh  quatVisualiser.asv  quatVisualiser.m  quaternionVisualiser.py  readVinrationSensor.py  record.sh  vertical_collision.bag
Matlab/: 21.10.22-open-loop-drill.xlsx  28-10-22-16-18-55.csv  28-10-22-drilling with pecking.xlsx  cartesianPosition.csv  cartesianPosition.xlsx  drillEllipseFit.m  fit_ellipse.m  kinematicsEngine.m  quatVisualiser.m  test.xlsx  vibrationAnalysis.m
Presentation/: Presentation.pptx
bag/: drillTest3_2022-09-14-15-16-44.bag
bag/28-10-22/: _2022-10-28-16-29-03.bag  config.yaml  config_for_acrylic.yaml
bag/old/: 2022-09-14-15-01-44.bag  drillTest4_2022-09-14-15-30-29.bag  drillTest5_2022-09-14-15-40-25.bag
csv/: 2022-09-14-15-01-44-joint_states.csv  2022-09-14-15-01-44-wrench.csv  _2022-10-21-15-06-34-my_cartesian_compliance_controller-target_frame.csv  _2022-10-21-15-18-37-my_cartesian_compliance_controller-target_wrench.csv  _2022-10-21-15-18-37-wrench.csv  _2022-10-21-16-00-00-my_cartesian_compliance_controller-target_frame.csv  _2022-10-21-16-07-52-my_cartesian_compliance_controller-target_frame.csv  _2022-10-21-16-54-56-my_cartesian_compliance_controller-target_wrench.csv  _2022-10-21-17-15-26-my_cartesian_compliance_controller-target_wrench.csv  drillTest2_2022-09-14-15-01-59-wrench.csv  drillTest3_2022-09-14-15-16-44-wrench.csv  drillTest5_2022-09-14-15-40-25-wrench.csv
csv/21-10-2022/: _2022-10-21-15-06-34-my_cartesian_compliance_controller-target_wrench.csv  _2022-10-21-15-06-34-wrench.csv  _2022-10-21-15-18-37-joint_states.csv  _2022-10-21-15-26-55-wrench.csv  _2022-10-21-15-40-11-my_cartesian_compliance_controller-target_wrench.csv  _2022-10-21-16-00-00-wrench.csv  _2022-10-21-16-54-56-my_cartesian_compliance_controller-target_frame.csv
csv/21-10-22/: _2022-10-21-15-06-34-wrench.csv  _2022-10-21-15-18-37-my_cartesian_compliance_controller-target_frame.csv  _2022-10-21-15-26-55-my_cartesian_compliance_controller-target_frame.csv  _2022-10-21-15-26-55-wrench.csv  _2022-10-21-15-40-11-my_cartesian_compliance_controller-target_frame.csv  _2022-10-21-16-00-00-my_cartesian_compliance_controller-target_wrench.csv  _2022-10-21-16-00-00-wrench.csv  _2022-10-21-16-07-52-my_cartesian_compliance_controller-target_frame.csv  _2022-10-21-17-15-26-my_cartesian_compliance_controller-target_frame.csv
csv/28-10-22/: _2022-10-28-16-18-55-my_cartesian_compliance_controller-target_frame.csv  _2022-10-28-16-18-55-wrench.csv  _2022-10-28-16-26-08-my_cartesian_compliance_controller-target_frame.csv  _2022-10-28-16-26-08-my_cartesian_compliance_controller-target_wrench.csv  _2022-10-28-16-26-08-wrench.csv  _2022-10-28-16-29-03-my_cartesian_compliance_controller-target_frame.csv  _2022-10-28-16-29-03-my_cartesian_compliance_controller-target_wrench.csv  _2022-10-28-16-29-03-wrench.csv  _2022-10-28-16-32-45-my_cartesian_compliance_controller-target_frame.csv  _2022-10-28-16-32-45-my_cartesian_compliance_controller-target_wrench.csv  _2022-10-28-16-32-45-wrench.csv  _2022-10-28-16-40-54-my_cartesian_compliance_controller-target_frame.csv  _2022-10-28-16-40-54-my_cartesian_compliance_controller-target_wrench.csv  _2022-10-28-16-40-54-wrench.csv  _2022-10-28-16-44-07-my_cartesian_compliance_controller-target_frame.csv  _2022-10-28-16-44-07-wrench.csv  _2022-10-28-16-49-00-my_cartesian_compliance_controller-target_frame.csv  _2022-10-28-16-49-00-my_cartesian_compliance_controller-target_wrench.csv
csv/3-11-22/: _2022-11-03-15-16-39-my_cartesian_compliance_controller-target_frame.csv  _2022-11-03-15-16-39-my_cartesian_compliance_controller-target_wrench.csv  _2022-11-03-15-16-39-wrench.csv
custom_control/: CMakeLists.txt  controller_plugin.xml  myController.xml  package.xml
custom_control/config/: config.yaml  custom_control.yaml  custom_control_original.yaml  ur5e_calibration.yaml
custom_control/include/custom_control/: complianceMovementController.h  jointTrajectoryController.h  joystick.h  myController.h
custom_control/launch/: custom_control.launch  custom_control_sim.launch  driver.xml  joy_to_wrench.launch  kinematics.xml  record.launch  robot.launch
custom_control/scripts/: JoystickToWrench.py  joy_to_geometry.py  readVinrationSensor.py
custom_control/src/: complianceMovementController.cpp  jointTrajectoryController.cpp  joystick.cpp  main.cpp  mainJQT.cpp  remap.cpp
custom_control/urdf/: setup.urdf.xacro
log_data/: 03-11-22-15-16-39.csv  07-10-22-18-37-56.csv  14-10-22-15-52-19.csv  14-10-22-15-53-55.csv  14-10-22-15-56-33.csv  14-10-22-15-57-50.csv  14-10-22-17-21-33.csv  19-10-22-15-41-50.csv  19-10-22-15-53-00.csv  19-10-22-16-10-35.csv  21-10-22-15-06-34.csv  21-10-22-15-18-38.csv  21-10-22-15-26-55.csv  21-10-22-15-40-11.csv  21-10-22-16-00-00.csv  21-10-22-16-07-53.csv  21-10-22-16-54-57.csv  21-10-22-17-15-26.csv
log_data/14-10-22/: 14-10-22-15-52-19.csv  14-10-22-15-53-55.csv  14-10-22-15-57-50.csv  14-10-22-17-21-33.csv
log_data/19-10-22/: 19-10-22-15-42-09.csv  19-10-22-15-49-02.csv  19-10-22-16-58-32.csv
log_data/21-10-22/: 21-10-22-15-06-34.csv  21-10-22-15-18-38.csv  21-10-22-15-26-55.csv  21-10-22-15-40-11.csv  21-10-22-16-00-00.csv  21-10-22-16-07-53.csv  21-10-22-16-54-57.csv  21-10-22-17-15-26.csv
log_data/28-10-22/: 28-10-22-16-18-55.csv  28-10-22-16-26-07.csv  28-10-22-16-29-03.csv  28-10-22-16-32-45.csv  28-10-22-16-40-54.csv  28-10-22-16-44-07.csv  28-10-22-16-49-00.csv
log_data/old/: 28-10-22-16-05-24.csv
move_it_api/: CMakeLists.txt  package.xml
move_it_api/src/: pose_client.cpp  pose_server.cpp
move_it_api/srv/: pose_server.srv
spreadies/: 21.10.22-open-loop-drill.xlsx  28-10-22-drilling with pecking.xlsx  3-11-22-drilling with pecking & PI controller.xlsx  _2022-10-21-15-06-34-wrench.xlsx  _2022-10-21-15-18-37-wrench.xlsx  _2022-10-21-16-00-00-wrench.xlsx
spreadies/21-10-22/: _2022-10-21-15-06-34-wrench.xlsx  (+2 more)
user_controller/: CMakeLists.txt  package.xml
utility/: CMakeLists.txt  package.xml
(+50 files in other folders)
